[metadata]
name = papermerge-filebased-unique
version = 0.1.0
description = Papermerge app that checks for file based duplicates.
long_description = file: README.rst
url = https://www.papermerge.com/
author = Eugen Ciur
author_email = eugen@papermerge.com
license = Apache 2.0
[options]
include_package_data = true